# HealthWear-tauri

./: .gitignore  README.md  package.json  pnpm-lock.yaml
docs/: ANDROID_BLE.md  HEALTH_MODULES.md  PROTOCOL.md  ROADMAP.md
scripts/: setup-android-ble.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  wisdom.rs
src-tauri/src/ble/: btleplug.rs  desktop.rs  mod.rs  protocol.rs
src-tauri/src/health/: constants.rs  db.rs  export.rs  mod.rs  parse.rs  store.rs  sync.rs  types.rs
src/api/: health.ts  ring.ts
src/components/: DevicePanel.vue  HealthPanel.vue  WisdomModeList.vue
src/types/: health.ts  ring.ts
