[package]
name = "healthwear-tauri"
version = "0.1.0"
description = "HealthWear 智能戒指跨平台控制台"
authors = ["soyetsin"]
edition = "2021"

[lib]
name = "healthwear_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
parking_lot = "0.12"
rusqlite = { version = "0.32", features = ["bundled"] }

# 桌面端与 Android BLE（iOS 暂用 Mock）
[target.'cfg(not(target_os = "ios"))'.dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures-util = "0.3"
